plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
    id "com.github.node-gradle.node" version "7.0.2"
}

group = 'com.doubles'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    gradlePluginPortal()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // devtools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // mysql
    runtimeOnly 'com.mysql:mysql-connector-j'

    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    // redis LocalDateTime 문제 해결을 위한 JavaTimeModule 추가
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

apply plugin: 'com.github.node-gradle.node'

node {
    nodeProjectDir = file("${project.projectDir}/frontend")
    version = '20.9.0'
    download = true
}

task npmBuild(dependsOn: npmInstall, type: NpmTask) {
    args = ['run', 'build']
}

compileJava.dependsOn 'npmBuild'